# hyperart

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  canvaselements.cpp  canvaselements.h  datareader.cpp  datareader.h  defs.cpp  defs.h  diagram.cpp  diagram.h  diagramview.h  element.cpp  element.h  irregularpgon.cpp  irregularpgon.h  layer.cpp  layer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  parameters.cpp  parameters.h  pattern.cpp  pattern.h  permutation.cpp  permutation.h  pgonedge.cpp  pgonedge.h  poincareview.cpp  poincareview.h  regularpgon.cpp  regularpgon.h  transformation.cpp  transformation.h
designs/: README  cl1.had  cl166.had  cl2.had  cl3.had  cl36bent.had  cl4.had  fig12.had  fig13.had  fig14.had  fig15.had  fig16p.had  fig16q.had  fig17c.had  fig19.had  fig64.had  fstar54.had  leaf.had  leaf93.had  p104lr46.had  p104rf64.had  p104rf66.had  p25.had  p42.had  p53.had  p54.had  p56.had  p7073.had  p7074.had  p7083.had  p85.had  p8584.had  tri64.had  trifill.had
designs/irp/: tri.had  tri4636.had
docs/: release_notes.md
hyperart_core/: CMakeLists.txt  datareader.cpp  datareader.h  defs.cpp  defs.h  diagram.cpp  diagram.h  element.cpp  element.h  irregularpgon.cpp  irregularpgon.h  layer.cpp  layer.h  matrix.cpp  matrix.h  parameters.cpp  parameters.h  pattern.cpp  pattern.h  permutation.cpp  permutation.h  pgonedge.cpp  pgonedge.h  regularpgon.cpp  regularpgon.h  transformation.cpp  transformation.h
hyperart_qtquick/: CMakeLists.txt  DesignWindow.qml  Main.qml  WindowManager.qml  appcontroller.cpp  appcontroller.h  hyperartcanvas.cpp  hyperartcanvas.h  main.cpp
hyperart_qtwidgets/: CMakeLists.txt  canvaselements.cpp  canvaselements.h  diagramview.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  poincareview.cpp  poincareview.h
icons/: HyperArt.icns  README
